tests/fixtures/positive/style/UnusedParameter.kt
package style

fun foo(unused: Int) {
    println("hello")
}
