tests/fixtures/negative/style/ForbiddenVoid.kt
package style

fun foo(): Unit {}

fun bar() {
    println("hello")
}
